--- a/this.css
+++ b/this.css
@@ -2,9 +2,18 @@ body{
   background-color: lightblue;
 }
 
-p, ul{
+p, li{
   color: purple;
 }
+
+ul{
+  list-style-type: none;
+}
+
 img{
   height: 300px;
+}
+
+h1, h2, h3, h4, h5, h6{
+  color: yellow;
 }
